[package]
name = "pastebin"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["ArkhamCookie <cargo@mail.arkhamcookie.com>"]
description = "A pastebin service using Turso as a database and experimenting with different backends."
homepage = "https://github.com/ArkhamCookie/turso-pastebin"
repository = "https://github.com/ArkhamCookie/turso-pastebin"
readme = "README.md"
keywords = ["pastebin"]
exclude = []

[dependencies]
clap = { version = "4.5.60", features = ["derive", "cargo"] }
http-body-util = { version = "0.1.3", optional = true }
hyper = { version = "1.8.1", features = ["full"], optional = true }
hyper-util = { version = "0.1.20", features = ["full"], optional = true }
rand = "0.10.0"
tokio = { version = "1.50.0", features = ["full"] }
turso = "0.5.0"

[features]
default = []
all = ["hyper"] # used for testing
hyper = ["dep:http-body-util", "dep:hyper", "dep:hyper-util"]
