[package]
name = "pastebin"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["ArkhamCookie <cargo@mail.arkhamcookie.com>"]
description = "A pastebin service using Turso as a database and experimenting with different backends."
homepage = "https://github.com/ArkhamCookie/turso-pastebin"
repository = "https://github.com/ArkhamCookie/turso-pastebin"
readme = "README.md"
keywords = ["pastebin"]
exclude = []

[dependencies]
axum = { version = "0.8.8", optional = true }
clap = { version = "4.5.60", features = ["derive", "cargo"] }
http-body-util = { version = "0.1.3", optional = true }
hyper = { version = "1.8.1", features = ["full"], optional = true }
hyper-util = { version = "0.1.20", features = ["full"], optional = true }
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.149", optional = true }
tokio = { version = "1.50.0", features = ["full"] }
turso = "0.5.0"

[features]
default = []
all = ["axum", "hyper"] # used for testing
axum = ["dep:axum", "dep:serde", "dep:serde_json"]
hyper = ["dep:http-body-util", "dep:hyper", "dep:hyper-util"]
