[package]
name = "turso-bin"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["ArkhamCookie <cargo@mail.arkhamcookie.com>"]
description = "A pastebin service using Turso as a database and experimenting with different backends."
homepage = "https://github.com/ArkhamCookie/turso-pastebin"
repository = "https://github.com/ArkhamCookie/turso-pastebin"
readme = "README.md"
keywords = ["pastebin"]
exclude = []

[dependencies]
axum = { version = "0.8.8", optional = true }
clap = { version = "4.5.60", features = ["derive", "cargo"] }
directories = "6.0.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = { version = "1.0.149"}
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.6"
turso = "0.5.0"

[features]
default = []
all = ["axum"] # used for testing
axum = ["dep:axum"]
